@@ -1,3 +1,9 @@
+2008-04-08  Vincent Untz  <vuntz@gnome.org>
+
+	* clock-location.[ch]: remove clock_location_new_from_env(). Not really
+	sure it's a good thing to have (can give pretty wrong results), and
+	it's not used.
+
 ==================== 2.22.1.1 ====================
 
 2008-04-08  Vincent Untz  <vuntz@gnome.org>
